--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,6 +24,14 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget=17
+    }
     if (project.android.hasProperty("namespace")) {
         namespace 'com.humazed.google_map_location_picker'
     }
