--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: google_map_location_picker
 description: "🌍 Map location picker for flutter Based on google_maps_flutter"
-version: 7.2.3
+version: 7.2.4
 homepage: https://github.com/apps-auth/modern_form_google_map_location_picker.git
 
 environment:
@@ -42,7 +42,7 @@ flutter:
       # https://flutter.dev/docs/development/packages-and-plugins/developing-packages#plugin-platforms
       # -------------------
       android:
-        package: com.humazed.google_map_location_picker
+        package: com.example.google_map_location_picker
         pluginClass: GoogleMapLocationPickerPlugin
     # -------------------
 
